--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -48,7 +48,7 @@
             <div class="container nav-container">
                 <div class="responsive-mobile-menu">
                     <div class="logo-wrapper">
-                        <a href="index.html" class="logo">
+                        <a href="{% url 'index' %}" class="logo">
                             <img src="{% static 'assets/img/logo.png' %}" alt="">
                         </a>
                     </div>
@@ -105,14 +105,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget">
                             <div class="about_us_widget">
-                                <a href="index.html" class="footer-logo"> <img src="{% static "assets/img/logo.png" %}" alt="footer logo"></a>
+                                <a href="{% url 'index' %}" class="footer-logo"> <img src="{% static "assets/img/logo.png" %}" alt="footer logo"></a>
                                 <p>Sed do eiusmod tempor incididunt ut labore et dolore eiusmod tempor incididunt </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget ">
-                            <h4 class="widget-title">About Me</h4>
+                            <h4 class="widget-title">A propos de nous</h4>
                             <p>Sed do eiusmod tempor incididunt ut labore et dolore eiusmod tempor incididunt </p>
                             <ul class="contact_info_list">
                                 <li class="single-info-item">
@@ -136,21 +136,20 @@
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget widget_nav_menu">
-                            <h4 class="widget-title">Useful Links</h4>
+                            <h4 class="widget-title">Liens utils</h4>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">the issues</a></li>
-                                <li><a href="#">our Campaign</a></li>
-                                <li><a href="#">our volunteer</a></li>
-                                <li><a href="#">contact</a></li>
+                                <li><a href="{% url 'index' %}">Accueil</a></li>
+                                <li><a href="{% url 'events' %}">Evénements</a></li>
+                                <li><a href="{% url 'news' %}">Actualités</a></li>
+                                <li><a href="{% url 'contact' %}">contact</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget widget_nav_menu">
-                            <h4 class="widget-title">support</h4>
+                            <h4 class="widget-title">Support</h4>
                             <ul>
-                                <li><a href="#">Support Center</a></li>
+                                <li><a href="#">Help desk</a></li>
                                 <li><a href="#">Terms of Use</a></li>
                                 <li><a href="#">Privacy & Policy</a></li>
                                 <li><a href="#">FAQs</a></li>
@@ -165,7 +164,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright-area-inner">
-                            &copy; Copyright 2020 Harnold All rights reserved.
+                            &copy; Copyright 2024 All rights reserved.
                         </div>
                     </div>
                 </div>
