--- a/templates/index.html
+++ b/templates/index.html
@@ -5,56 +5,58 @@
 
 {% block content %}
 
-    <div class="header-slider-one">
-        <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
-            <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %} );"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-8">
-                        <div class="header-inner-03">
-                            <!-- header inner -->
-                            <h1 class="title">Together we can make better country</h1>
-                            <div class="header-bottom">
-                                <div class="author-mate">
-                                    <div class="author-sign">
-                                        <img src="{% static 'assets/img/header-slider/sign.png' %}" alt="">
-                                    </div>
-                                    <div class="author-designation">
-                                        <p>Candidate, Democrate</p>
-                                    </div>
+    
+<div class="header-slider-one">
+    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
+        <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %});"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-lg-8">
+                    <div class="header-inner-03">
+                        <!-- header inner -->
+                        <h1 class="title">Together we can make better country</h1>
+                        <div class="header-bottom">
+                            <div class="author-mate">
+                                <div class="author-sign">
+                                    <img src="{% static "assets/img/header-slider/sign.png" %}" alt="">
+                                </div>
+                                <div class="author-designation">
+                                    <p>Candidate, Democrate</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- //.header inner -->
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
-            <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %});"></div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-6 col-lg-8">
-                        <div class="header-inner-03">
-                            <!-- header inner -->
-                            <h1 class="title">Together we can make better country</h1>
-                            <div class="header-bottom">
-                                <div class="author-mate">
-                                    <div class="author-sign">
-                                        <img src="{% static "assets/img/header-slider/sign.png"%}" alt="">
-                                    </div>
-                                    <div class="author-designation">
-                                        <p>Candidate, Democrate</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- //.header inner -->
-                    </div>
+                    <!-- //.header inner -->
                 </div>
             </div>
         </div>
     </div>
+    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
+        <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %});"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-lg-8">
+                    <div class="header-inner-03">
+                        <!-- header inner -->
+                        <h1 class="title">Together we can make better country</h1>
+                        <div class="header-bottom">
+                            <div class="author-mate">
+                                <div class="author-sign">
+                                    <img src="{% static "assets/img/header-slider/sign.png" %}" alt="">
+                                </div>
+                                <div class="author-designation">
+                                    <p>Candidate, Democrate</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- //.header inner -->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
     <div class="header-bottom-area m-top">
         <div class="container">
             <div class="row no-gutters justify-content-center">
@@ -70,18 +72,16 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="contact-info header-bottom-contact bg-litered">
-                        <form action="contact.html" class="contact-page-form">
+                        <form action="{% url 'contact' %}" class="contact-page-form">
                             <div class="row no-gutters">
-                                <div class="col-md-6">
+                                
+                                <div class="col-md-8 p-3">
                                     <div class="form-group">
-                                        <input type="email" class="form-control brrtb" placeholder="Your Email">
+                                        <button type="submit" class="btn bg-blue p-2 m-2 text-white">
+                                            Cliquez ici et laissez nous un message
+                                        </button>
                                     </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group contact-info-btn">
-                                        <input type="text" class="form-control brltb" placeholder="Your Phone">
-                                        <button type="submit" class="subscribe-btn"><i class="fas fa-long-arrow-alt-right"></i></button>
-                                    </div>
+                                    
                                 </div>
                             </div>
                         </form>
@@ -395,64 +395,30 @@
                 </div>-->
                 <div class="col-lg-12">
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="single-blog-grid-01">
-                                <div class="thumb">
-                                    <img src="{% static "assets/img/blog/02.png" %}" alt="blog image">
-                                </div>
-                                <div class="content">
-                                    <ul class="post-meta">
-                                        <li><a href="#"><span><em>By</em></span> Admin</a></li>
-                                        <li class="date"><a href="#"><i class="flaticon-booking"></i>20 Dec 2019</a></li>
-                                    </ul>
-                                    <h4 class="title"><a href="#">Better rules for selecting</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
+                        {% for new in news %}
 
-                            <div class="single-blog-grid-01">
-                                <div class="thumb">
-                                    <img src="{% static "assets/img/blog/03.png" %}" alt="blog image">
-                                </div>
-                                <div class="content">
-                                    <ul class="post-meta">
-                                        <li><a href="#"><span><em>By</em></span> Admin</a></li>
-                                        <li class="date"><a href="#"><i class="flaticon-booking"></i>20 Dec 2019</a></li>
-                                    </ul>
-                                    <h4 class="title"><a href="#">Reduce budget of USA</a></h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="single-blog-grid-01">
-                                <div class="thumb">
-                                    <img src="{% static "assets/img/blog/04.png" %}" alt="blog image">
-                                </div>
-                                <div class="content">
-                                    <ul class="post-meta">
-                                        <li><a href="#"><span><em>By</em></span> Admin</a></li>
-                                        <li class="date"><a href="#"><i class="flaticon-booking"></i>20 Dec 2019</a></li>
-                                    </ul>
-                                    <h4 class="title"><a href="#">Democrate election idea</a></h4>
+                            <div class="col-md-4">
+                                <div class="single-blog-grid-01">
+                                    <div class="thumb">
+                                        <img src="{{new.image.url}}" style="width: 360px; height: 200px; object-fit: cover;" class="img-fluid" alt="blog image" >
+                                    </div>
+                                    <div class="content">
+                                        <ul class="post-meta">
+                                            <li><span><em>By</em></span> {{new.author}}</li>
+                                            <li class="date"><a><i class="flaticon-booking"></i>{{new.created_at}}</a></li>
+                                        </ul>
+                                        <h4 class="title"><a href="{% url 'new_details' new.id %}">{{new.title}}</a></h4>
+                                        <p>{{new.summary}}</p>
+                                        <button class="btn btn-info"><a href="{% url 'new_details' new.id %}">Voir plus</a></button>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="single-blog-grid-01">
-                                <div class="thumb">
-                                    <img src="{% static "assets/img/blog/05.png" %}" alt="blog image">
-                                </div>
-                                <div class="content">
-                                    <ul class="post-meta">
-                                        <li><a href="#"><span><em>By</em></span> Admin</a></li>
-                                        <li class="date"><a href="#"><i class="flaticon-booking"></i>20 Dec 2019</a></li>
-                                    </ul>
-                                    <h4 class="title"><a href="#">Vote countdown start jun</a></h4>
-                                </div>
-                            </div>
-                        </div>
+                        
+                        {% endfor %}
+
                     </div>
+
+                    <div><button class="btn btn-info"><a href="{% url 'news' %}">Voir plus d'actualités</a></button></div>
                 </div>
             </div>
         </div>
