--- a/templates/news.html
+++ b/templates/news.html
@@ -59,20 +59,75 @@
                             <div class="col-md-4">
                                 <div class="single-blog-grid-01">
                                     <div class="thumb">
-                                        <img src="{{new.image.url}}" alt="blog image">
+                                        <img src="{{new.image.url}}" style="width: 360px; height: 200px; object-fit: cover;" class="img-fluid" alt="blog image" >
                                     </div>
                                     <div class="content">
                                         <ul class="post-meta">
-                                            <li><a href="#"><span><em>By</em></span> {{new.author}}</a></li>
-                                            <li class="date"><a href="#"><i class="flaticon-booking"></i>{{new.created_at}}</a></li>
+                                            <li><span><em>By</em></span> {{new.author}}</li>
+                                            <li class="date"><a><i class="flaticon-booking"></i>{{new.created_at}}</a></li>
                                         </ul>
                                         <h4 class="title"><a href="{% url 'new_details' new.id %}">{{new.title}}</a></h4>
+                                        <p>{{new.summary}}</p>
+                                        <button class="btn btn-info"><a href="{% url 'new_details' new.id %}">Voir plus</a></button>
                                     </div>
                                 </div>
                             </div>
                         
                         {% endfor %}
+
                     </div>
+                    
+
+                    <div class="row">
+                        {% if news.has_other_pages %}
+                        <nav aria-label="Page navigation">
+                            <ul class="pagination justify-content-center">
+                                {% if news.has_previous %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ news.previous_page_number }}" aria-label="Previous">
+                                        <span aria-hidden="true">Précédent</span>
+                                    </a>
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
+                                        <span aria-hidden="true">Précédent</span>
+                                    </a>
+                                </li>
+                                {% endif %}
+                                
+                                {% for i in news.paginator.page_range %}
+                                    {% if news.number == i %}
+                                        <li class="page-item active" aria-current="page">
+                                            <span class="page-link">
+                                                {{ i }} <span class="sr-only">(current)</span>
+                                            </span>
+                                        </li>
+                                    {% else %}
+                                        <li class="page-item">
+                                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                                        </li>
+                                    {% endif %}
+                                {% endfor %}
+                                
+                                {% if news.has_next %}
+                                <li class="page-item">
+                                    <a class="page-link" href="?page={{ news.next_page_number }}" aria-label="Next">
+                                        <span aria-hidden="true">Suivant</span>
+                                    </a>
+                                </li>
+                                {% else %}
+                                <li class="page-item disabled">
+                                    <a class="page-link" href="#" tabindex="-1" aria-label="Next">
+                                        <span aria-hidden="true">Suivant</span>
+                                    </a>
+                                </li>
+                                {% endif %}
+                            </ul>
+                        </nav>
+                        {% endif %}
+                    </div>
+
                 </div>
             </div>
         </div>
