--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 <!-- Breadcrumb Area -->
-<div class="breadcrumb-area  margin-bottom-120" style="background-image:url(assets/img/breadcrumb/01.png);">
+<div class="breadcrumb-area  margin-bottom-120" style="background-image:url({% static "assets/img/breadcrumb/01.png" %});">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
