--- a/templates/index.html
+++ b/templates/index.html
@@ -72,19 +72,17 @@
                 </div>
                 <div class="col-lg-8">
                     <div class="contact-info header-bottom-contact bg-litered">
-                        <form action="{% url 'contact' %}" class="contact-page-form">
-                            <div class="row no-gutters">
-                                
-                                <div class="col-md-8 p-3">
-                                    <div class="form-group">
-                                        <button type="submit" class="btn bg-blue p-2 m-2 text-white">
-                                            Cliquez ici et laissez nous un message
-                                        </button>
-                                    </div>
-                                    
-                                </div>
+                        <div class="row">
+                            <div class="col">
+
                             </div>
-                        </form>
+                            <div class="col-md-6 bg-blue p-3 text-white">
+                                <a href="{% url 'contact' %}">Cliquer ici et laissez nous un message</a>
+                            </div>
+                            <div class="col">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
