--- a/templates/event.html
+++ b/templates/event.html
@@ -40,7 +40,7 @@
 
                         <div class="col-lg-6 single-event-item margin-bottom-30">
                             <div class="thumb">
-                                <img src="{{event.image.url}}" style="width: 260px; height: 186px; object-fit: cover;" class="img-fluid" alt="blog image">
+                                <img src="{{event.image.url}}" style="width: 260px; height: 190px; object-fit: contain;" class="img-fluid" alt="blog image">
                             </div>
                             <div class="content-wrapper">
                                 <div class="content">
