--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
 
     
 <div class="header-slider-one">
-    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
-        <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %});"></div>
+    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/NEW.png" %});">
+        <!--<div class="bg-img" style="background-image:url({% static "assets/img/photo.jpg" %});"></div>-->
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-8">
@@ -31,8 +31,8 @@
             </div>
         </div>
     </div>
-    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/bg1.png" %});">
-        <div class="bg-img" style="background-image:url({% static "assets/img/bg1.png" %});"></div>
+    <div class="header-area style-02 header-bg-03" style="background-image:url({% static "assets/img/NEW.png" %});">
+        <!--<div class="bg-img mt-5" style="background-image:url({% static "assets/img/photo.jpg" %});"></div>-->
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 col-lg-8">
