--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -49,7 +49,7 @@
                 <div class="responsive-mobile-menu">
                     <div class="logo-wrapper">
                         <a href="{% url 'index' %}" class="logo">
-                            <img src="{% static 'assets/img/logo.png' %}" alt="">
+                            <img src="{% static 'assets/img/UFDG_logo_tr.png' %}"   style="width: 200px; height: 100px; object-fit: contain;" class="img-fluid" alt="">
                         </a>
                     </div>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bizcoxx_main_menu" aria-expanded="false" aria-label="Toggle navigation">
@@ -111,7 +111,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="footer-widget widget">
                             <div class="about_us_widget">
-                                <a href="{% url 'index' %}" class="footer-logo"> <img src="{% static "assets/img/logo.png" %}" alt="footer logo"></a>
+                                <a href="{% url 'index' %}" class="footer-logo"> <img src="{% static "assets/img/UFDG_logo_tr.png" %}"  style="width: 200px; height: 100px; object-fit: contain;" class="img-fluid" alt="footer logo"></a>
                                 <p>Sed do eiusmod tempor incididunt ut labore et dolore eiusmod tempor incididunt </p>
                             </div>
                         </div>
