--- a/templates/index.html
+++ b/templates/index.html
@@ -398,7 +398,7 @@
                             <div class="col-md-4">
                                 <div class="single-blog-grid-01">
                                     <div class="thumb">
-                                        <img src="{{new.image.url}}" style="width: 360px; height: 200px; object-fit: cover;" class="img-fluid" alt="blog image" >
+                                        <img src="{{new.image.url}}" style="width: 360px; height: 200px; object-fit: contain;" class="img-fluid" alt="blog image" >
                                     </div>
                                     <div class="content">
                                         <ul class="post-meta">
