--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="breadcrumb-inner">
-                    <h2 class="page-title">Saissez nous un message</h2>
+                    <h2 class="page-title">laissez nous un message</h2>
                     <ul class="page-list">
                         <li><a href="{% url 'index' %}">Accueil</a></li>
                         <li><a href="#">Contactez nous</a></li>
