--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,14 @@
                 <div class="col-xl-6 col-lg-8">
                     <div class="header-inner-03">
                         <!-- header inner -->
-                        <h1 class="title">Together we can make better country</h1>
+                        <h1 class="title">Ensemble, nous pouvons créer un pays  sûr</h1>
                         <div class="header-bottom">
                             <div class="author-mate">
                                 <div class="author-sign">
                                     <img src="{% static "assets/img/header-slider/sign.png" %}" alt="">
                                 </div>
                                 <div class="author-designation">
-                                    <p>Candidate, Democrate</p>
+                                    <p>Candidat, Democrate</p>
                                 </div>
                             </div>
                         </div>
@@ -38,14 +38,14 @@
                 <div class="col-xl-6 col-lg-8">
                     <div class="header-inner-03">
                         <!-- header inner -->
-                        <h1 class="title">Together we can make better country</h1>
+                        <h1 class="title">Ensemble, nous pouvons créer un pays  sûr</h1>
                         <div class="header-bottom">
                             <div class="author-mate">
                                 <div class="author-sign">
                                     <img src="{% static "assets/img/header-slider/sign.png" %}" alt="">
                                 </div>
                                 <div class="author-designation">
-                                    <p>Candidate, Democrate</p>
+                                    <p>Candidat, Democrate</p>
                                 </div>
                             </div>
                         </div>
@@ -63,9 +63,9 @@
                 <div class="col-lg-4">
                     <div class="header-bottom-top bg-blue">
                         <div class="section-title white">
-                            <h2 class="title">Join Our Movement
+                            <h2 class="title">Rejoindre ufdg
                             </h2>
-                            <p>Help fulfill our promise to Make America Great Again!</p>
+                            <p></p>
                         </div>
 
                     </div>
@@ -94,8 +94,8 @@
             <div class="row justify-content-center">
                 <div class="col-xl-7 col-sm-12 col-12">
                     <div class="section-title desktop-center margin-bottom-70">
-                        <span>Policy positions</span>
-                        <h2 class="title">Ideological Leader For Youth Generation
+                        <span>Positions politiques</span>
+                        <h2 class="title">Leader idéologique pour la génération des jeunes
                         </h2>
                     </div>
                 </div>
